--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,6 +5,6 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: "default" # Use our default layout (with navigation) on all pages
-title: "NLP 2019"
-description: "Assignments for intensive NLP course, University of Helsinki"
+title: "NLP 2020"
+description: "Assignments for NLP course, University of Helsinki"
 markdown: kramdown
